--- a/src/html/index.html
+++ b/src/html/index.html
@@ -50,6 +50,59 @@
         </div>
        </section>
 
+       <section id="our_team">
+        <img id="T-bg" src="../images/Union.png" alt="background">
+        <h2 id="our_team_title">Meet The Team</h2>
+
+        <div id="members">
+
+            <div id="individuals">
+                <img id="team_member" src="../images/zikra.png" alt="zikra">
+                <h4>Zikra Abdusemed</h4>
+                <p>President</p>
+                <div class ="socials">
+                    <a href="#"><img id="T-icons" src="../icons/email.png" alt="email"></a>
+                    <a href="#"><img id="T-icons" src="../icons/linkedin.png" alt="linkedin"></a>
+                    <a href="#"><img id="T-icons" src="../icons/github.png" alt="github"></a>
+                </div>
+            </div>
+
+            <div id="individuals">
+                <img id="team_member" src="../images/mahi.png" alt="mahi">
+                <h4>Mahi Zeki</h4>
+                <p>Vice President</p>
+                <div class ="socials">
+                    <a href="#"><img id="T-icons" src="../icons/email.png" alt="email"></a>
+                    <a href="#"><img id="T-icons" src="../icons/linkedin.png" alt="linkedin"></a>
+                    <a href="#"><img id="T-icons" src="../icons/github.png" alt="github"></a>
+                </div>
+            </div>
+
+            <div id="individuals">
+                <img id="team_member"src="../images/ali.png" alt="ali">
+                <h4>Ali Munir</h4>
+                <p>Finance and Treasure</p>
+                <div class ="socials">
+                    <a href="#"><img id="T-icons" src="../icons/email.png" alt="email"></a>
+                    <a href="#"><img id="T-icons" src="../icons/linkedin.png" alt="linkedin"></a>
+                    <a href="#"><img id="T-icons" src="../icons/github.png" alt="github"></a>
+                </div>
+            </div>
+
+            <div id="individuals">
+                <img id="team_member" src="../images/mahbub.png" alt="mahbub">
+                <h4>Mahbub Mohammed</h4>
+                <p>Management Team</p>
+                <div class ="socials">
+                    <a href="#"><img id="T-icons" src="../icons/email.png" alt="email"></a>
+                    <a href="#"><img id="T-icons" src="../icons/linkedin.png" alt="linkedin"></a>
+                    <a href="#"><img id="T-icons" src="../icons/github.png" alt="github"></a>
+                </div>
+            </div>
+
+        </div>
+       </section>
+
     </main>
     
 </body>
