--- a/src/html/index.html
+++ b/src/html/index.html
@@ -103,6 +103,48 @@
         </div>
        </section>
 
+       <section id="courses">
+        <img id="bg_courses" src="../images/bg_courses.png" alt="course_card">
+        <h2 id="course_title">Our Courses</h2>
+        <div id="courses">
+            <div id="row1">
+                <div id="course_card">
+                    <img id="course_img" src="../images/web.jpg" alt="course1">
+                    <h4>Web Development 🌍</h4>
+                    <p>Learn how to design and build websites using HTML, CSS, JavaScript, and modern frameworks.</p>
+                    <a href="">Preview Course</a>
+                </div>
+
+                <div id="course_card">
+                    <img id="course_img" src="../images/cyber.jpg" alt="course2">
+                    <h4>Cyber Security🔒</h4>
+                    <p>Explore basics of cyber security.</p>
+                    <a href="">Preview Course</a>
+
+                </div>
+            </div>
+
+            <div id="row2">
+                <div id="course_card">
+                    <img id="course_img" src="../images/ai.jpg" alt="course3">
+                    <h4>AI 🧠</h4>
+                    <p>Explore the world of artificial intelligence and machine learning with beginner-friendly projects.</p>
+                    <a href="">Preview Course</a>
+
+                </div>
+                <div id="course_card">
+                    <img id="course_img" src="../images/leadership.jpg" alt="course4">
+                    <h4>Leadership & Entrepreneurship 🚀</h4>
+                    <p>Training on project management, teamwork, and startup development.</p>
+                    <a href="">Preview Course</a>
+
+                </div>
+            </div>
+        </div>
+
+
+       </section>
+
     </main>
     
 </body>
