--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="src/css/index.css">
 </head>
 <body>
     <header>
@@ -21,8 +21,8 @@
     </header>
     <main>
         <section id="home">
-       <img id="top_right" src="../images/top_right.png" alt="corner image">
-       <img id="logo" src="../images/logo.jpeg" alt="logo">
+       <img id="top_right" src="src/images/top_right.png" alt="corner image">
+       <img id="logo" src="src/images/logo.jpeg" alt="logo">
        <h1>Empowering Harar’s Next <br> Generation of Innovators 🚀</h1>
        <p id="intro_text">Harar Dev Center is the first community-driven learning hub in Harar,
         dedicated to technology, creativity, and innovation. We run hands-on 
@@ -40,7 +40,7 @@
         provides access to digital skills, mentorship, and innovation opportunities for students,
         graduates, and young professionals in Harar.</p>
 
-        <img id="rocket" src="../images/rocket.png" alt="background image">
+        <img id="rocket" src="src/images/rocket.png" alt="background image">
         <div class="mission_vision">
         <h3 id="mission">Our Mission</h3>
         <p id="mission_text">To create a culture of learning, creativity, and innovation in Harar, enabling young people to compete globally while solving local challenges.</p>
@@ -51,52 +51,52 @@
        </section>
 
        <section id="our_team">
-        <img id="T-bg" src="../images/Union.png" alt="background">
+       <!-- <img id="T-bg" src="../images/Union.png" alt="background"> -->
         <h2 id="our_team_title">Meet The Team</h2>
 
         <div id="members">
 
             <div id="individuals">
-                <img id="team_member" src="../images/zikra.png" alt="zikra">
+                <img id="team_member" src="src/images/zikra.png" alt="zikra">
                 <h4>Zikra Abdusemed</h4>
                 <p>President</p>
                 <div class ="socials">
-                    <a href="#"><img id="T-icons" src="../icons/email.png" alt="email"></a>
-                    <a href="#"><img id="T-icons" src="../icons/linkedin.png" alt="linkedin"></a>
-                    <a href="#"><img id="T-icons" src="../icons/github.png" alt="github"></a>
+                    <a href="#"><img id="T-icons" src="src/icons/email.png" alt="email"></a>
+                    <a href="#"><img id="T-icons" src="src/icons/linkedin.png" alt="linkedin"></a>
+                    <a href="#"><img id="T-icons" src="src/icons/github.png" alt="github"></a>
                 </div>
             </div>
 
             <div id="individuals">
-                <img id="team_member" src="../images/mahi.png" alt="mahi">
+                <img id="team_member" src="src/images/mahi.png" alt="mahi">
                 <h4>Mahi Zeki</h4>
                 <p>Vice President</p>
                 <div class ="socials">
-                    <a href="#"><img id="T-icons" src="../icons/email.png" alt="email"></a>
-                    <a href="#"><img id="T-icons" src="../icons/linkedin.png" alt="linkedin"></a>
-                    <a href="#"><img id="T-icons" src="../icons/github.png" alt="github"></a>
+                    <a href="#"><img id="T-icons" src="src/icons/email.png" alt="email"></a>
+                    <a href="#"><img id="T-icons" src="src/icons/linkedin.png" alt="linkedin"></a>
+                    <a href="#"><img id="T-icons" src="src/icons/github.png" alt="github"></a>
                 </div>
             </div>
 
             <div id="individuals">
-                <img id="team_member"src="../images/ali.png" alt="ali">
+                <img id="team_member"src="src/images/ali.png" alt="ali">
                 <h4>Ali Munir</h4>
                 <p>Finance and Treasure</p>
                 <div class ="socials">
-                    <a href="#"><img id="T-icons" src="../icons/email.png" alt="email"></a>
-                    <a href="#"><img id="T-icons" src="../icons/linkedin.png" alt="linkedin"></a>
-                    <a href="#"><img id="T-icons" src="../icons/github.png" alt="github"></a>
+                    <a href="#"><img id="T-icons" src="src/icons/email.png" alt="email"></a>
+                    <a href="#"><img id="T-icons" src="src/icons/linkedin.png" alt="linkedin"></a>
+                    <a href="#"><img id="T-icons" src="src/icons/github.png" alt="github"></a>
                 </div>
             </div>
 
             <div id="individuals">
-                <img id="team_member" src="../images/mahbub.png" alt="mahbub">
+                <img id="team_member" src="src/images/mahbub.png" alt="mahbub">
                 <h4>Mahbub Mohammed</h4>
                 <p>Management Team</p>
                 <div class ="socials">
-                    <a href="#"><img id="T-icons" src="../icons/email.png" alt="email"></a>
-                    <a href="#"><img id="T-icons" src="../icons/linkedin.png" alt="linkedin"></a>
-                    <a href="#"><img id="T-icons" src="../icons/github.png" alt="github"></a>
+                    <a href="#"><img id="T-icons" src="src/icons/email.png" alt="email"></a>
+                    <a href="#"><img id="T-icons" src="src/icons/linkedin.png" alt="linkedin"></a>
+                    <a href="#"><img id="T-icons" src="src/icons/github.png" alt="github"></a>
                 </div>
             </div>
 
@@ -104,19 +104,19 @@
        </section>
 
        <section id="courses">
-        <img id="bg_courses" src="../images/bg_courses.png" alt="course_card">
+        <img id="bg_courses" src="src/images/bg_courses.png" alt="course_card">
         <h2 id="course_title">Our Courses</h2>
         <div id="courses">
             <div id="row1">
                 <div id="course_card">
-                    <img id="course_img" src="../images/web.jpg" alt="course1">
+                    <img id="course_img" src="src/images/web.jpg" alt="course1">
                     <h4>Web Development 🌍</h4>
                     <p>Learn how to design and build websites using HTML, CSS, JavaScript, and modern frameworks.</p>
                     <a href="">Preview Course</a>
                 </div>
 
                 <div id="course_card">
-                    <img id="course_img" src="../images/cyber.jpg" alt="course2">
+                    <img id="course_img" src="src/images/cyber.jpg" alt="course2">
                     <h4>Cyber Security🔒</h4>
                     <p>Explore basics of cyber security.</p>
                     <a href="">Preview Course</a>
@@ -126,14 +126,14 @@
 
             <div id="row2">
                 <div id="course_card">
-                    <img id="course_img" src="../images/ai.jpg" alt="course3">
+                    <img id="course_img" src="src/images/ai.jpg" alt="course3">
                     <h4>AI 🧠</h4>
                     <p>Explore the world of artificial intelligence and machine learning with beginner-friendly projects.</p>
                     <a href="">Preview Course</a>
 
                 </div>
                 <div id="course_card">
-                    <img id="course_img" src="../images/leadership.jpg" alt="course4">
+                    <img id="course_img" src="src/images/leadership.jpg" alt="course4">
                     <h4>Leadership & Entrepreneurship 🚀</h4>
                     <p>Training on project management, teamwork, and startup development.</p>
                     <a href="">Preview Course</a>
