--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="ourteam.html">Our Team</a></li>
-                <li><a href="courses.html">Courses</a></li>
-                <li><a href="events.html">Events</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li id="nav_item"><a href="index.html">Home</a></li>
+                <li id="nav_item"><a href="about.html">About</a></li>
+                <li id="nav_item"><a href="ourteam.html">Our Team</a></li>
+                <li id="nav_item"><a href="courses.html">Courses</a></li>
+                <li id="nav_item"><a href="events.html">Events</a></li>
+                <li id="nav_item"><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
